[workspace]
resolver = "2"
members = ["examples/run_wasm"]

[package]
name = "bevy_key_rotation"
description = "Access and refresh token rotation for Bevy applications"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/loopystudios/bevy_key_rotation"
authors = ["Spencer C. Imbleau"]
keywords = ["gamedev"]
version = "0.5.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
web-time = "1.1.0"
thiserror = "2.0.12"
bevy_async_task = "0.8.0"
async-trait = "0.1.88"
bevy = { version = "0.16.0", default-features = false, features = [
  "bevy_state",
  "bevy_log",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
getrandom = { version = "0.3.2" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.50"
getrandom = { version = "0.3.2", features = ["wasm_js"] }
